// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Telemetry calls timeout by default 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/telemetry/fixtures/success
  siteId: test
  testOpts:
    errorMonitor: true
    pluginsListUrl: test
    silentLingeringProcesses: true
    telemetryOrigin: /test/socket
    telemetryTimeout: 0

> Current directory
  packages/build/tests/telemetry/fixtures/success

> Config file
  packages/build/tests/telemetry/fixtures/success/netlify.toml

> Resolved config
  build:
    publish: packages/build/tests/telemetry/fixtures/success
    publishOrigin: default

> Context
  production

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms

Error monitoring payload:
{
  "errorClass": "TimeoutError",
  "errorMessage": "The operation was aborted due to timeout",
  "context": "Telemetry error",
  "groupingHash": "Telemetry error/nThe operation was aborted due to timeout",
  "severity": "error",
  "unhandled": true,
  "pluginPackageJson": false,
  "BUILD_ID": "0",
  "other": {
    "groupingHash": "Telemetry error/nThe operation was aborted due to timeout"
  }
}"
`;

exports[`Telemetry error only reports to error monitor and does not affect build success 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/telemetry/fixtures/success
  siteId: test
  testOpts:
    errorMonitor: "true"
    pluginsListUrl: test
    silentLingeringProcesses: "true"
    telemetryOrigin: /test/socket
    telemetryTimeout: 9999

> Current directory
  packages/build/tests/telemetry/fixtures/success

> Config file
  packages/build/tests/telemetry/fixtures/success/netlify.toml

> Resolved config
  build:
    publish: packages/build/tests/telemetry/fixtures/success
    publishOrigin: default

> Context
  production

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms

Error monitoring payload:
{
  "errorClass": "telemetry",
  "errorMessage": "Response code: 500",
  "context": "Telemetry error",
  "groupingHash": "Telemetry error/nResponse code: 0",
  "severity": "error",
  "unhandled": true,
  "pluginPackageJson": false,
  "BUILD_ID": "0",
  "other": {
    "groupingHash": "Telemetry error/nResponse code: 0"
  }
}"
`;

exports[`Telemetry reports UI plugins success 1`] = `
[
  {
    "body": {
      "event": "build:ci_build_process_completed",
      "properties": {
        "buildVersion": "string",
        "duration": "number",
        "nodeVersion": "string",
        "osName": "string",
        "osPlatform": "string",
        "pluginCount": 1,
        "plugins": [
          {
            "installType": "ui",
            "name": "netlify-plugin-contextual-env",
            "nodeVersion": "string",
            "version": "string",
          },
        ],
        "siteId": "test",
        "status": "success",
        "steps": 4,
      },
      "timestamp": "number",
      "userId": "buildbot_user",
    },
    "headers": "accept accept-encoding accept-language authorization connection content-length content-type host sec-fetch-mode user-agent",
    "method": "POST",
    "url": "/track",
  },
]
`;

exports[`Telemetry reports build cancellation 1`] = `
[
  {
    "body": {
      "event": "build:ci_build_process_completed",
      "properties": {
        "buildVersion": "string",
        "nodeVersion": "string",
        "osName": "string",
        "osPlatform": "string",
        "pluginCount": 1,
        "plugins": [
          {
            "installType": "local",
            "name": "./plugin.js",
            "nodeVersion": "string",
            "version": "string",
          },
        ],
        "siteId": "test",
        "status": "cancelled",
      },
      "timestamp": "number",
      "userId": "buildbot_user",
    },
    "headers": "accept accept-encoding accept-language authorization connection content-length content-type host sec-fetch-mode user-agent",
    "method": "POST",
    "url": "/track",
  },
]
`;

exports[`Telemetry reports build success 1`] = `
[
  {
    "body": {
      "event": "build:ci_build_process_completed",
      "properties": {
        "buildVersion": "string",
        "duration": "number",
        "nodeVersion": "string",
        "osName": "string",
        "osPlatform": "string",
        "pluginCount": 0,
        "plugins": [],
        "siteId": "test",
        "status": "success",
        "steps": 3,
      },
      "timestamp": "number",
      "userId": "buildbot_user",
    },
    "headers": "accept accept-encoding accept-language authorization connection content-length content-type host sec-fetch-mode user-agent",
    "method": "POST",
    "url": "/track",
  },
]
`;

exports[`Telemetry reports local plugins success 1`] = `
[
  {
    "body": {
      "event": "build:ci_build_process_completed",
      "properties": {
        "buildVersion": "string",
        "duration": "number",
        "nodeVersion": "string",
        "osName": "string",
        "osPlatform": "string",
        "pluginCount": 1,
        "plugins": [
          {
            "installType": "local",
            "name": "./plugin.js",
            "nodeVersion": "string",
            "version": "string",
          },
        ],
        "siteId": "test",
        "status": "success",
        "steps": 4,
      },
      "timestamp": "number",
      "userId": "buildbot_user",
    },
    "headers": "accept accept-encoding accept-language authorization connection content-length content-type host sec-fetch-mode user-agent",
    "method": "POST",
    "url": "/track",
  },
]
`;

exports[`Telemetry reports netlify.toml-only plugins success 1`] = `
[
  {
    "body": {
      "event": "build:ci_build_process_completed",
      "properties": {
        "buildVersion": "string",
        "duration": "number",
        "nodeVersion": "string",
        "osName": "string",
        "osPlatform": "string",
        "pluginCount": 1,
        "plugins": [
          {
            "installType": "netlify_toml",
            "name": "netlify-plugin-contextual-env",
            "nodeVersion": "string",
            "version": "string",
          },
        ],
        "siteId": "test",
        "status": "success",
        "steps": 4,
      },
      "timestamp": "number",
      "userId": "buildbot_user",
    },
    "headers": "accept accept-encoding accept-language authorization connection content-length content-type host sec-fetch-mode user-agent",
    "method": "POST",
    "url": "/track",
  },
]
`;

exports[`Telemetry reports package.json plugins success 1`] = `
[
  {
    "body": {
      "event": "build:ci_build_process_completed",
      "properties": {
        "buildVersion": "string",
        "duration": "number",
        "nodeVersion": "string",
        "osName": "string",
        "osPlatform": "string",
        "pluginCount": 1,
        "plugins": [
          {
            "installType": "package.json",
            "name": "netlify-plugin-test",
            "nodeVersion": "string",
            "version": "string",
          },
        ],
        "siteId": "test",
        "status": "success",
        "steps": 4,
      },
      "timestamp": "number",
      "userId": "buildbot_user",
    },
    "headers": "accept accept-encoding accept-language authorization connection content-length content-type host sec-fetch-mode user-agent",
    "method": "POST",
    "url": "/track",
  },
]
`;

exports[`Telemetry reports plugin error 1`] = `
[
  {
    "body": {
      "event": "build:ci_build_process_completed",
      "properties": {
        "buildVersion": "string",
        "nodeVersion": "string",
        "osName": "string",
        "osPlatform": "string",
        "pluginCount": 1,
        "plugins": [
          {
            "installType": "local",
            "name": "./plugin.js",
            "nodeVersion": "string",
            "version": "string",
          },
        ],
        "siteId": "test",
        "status": "plugin-error",
      },
      "timestamp": "number",
      "userId": "buildbot_user",
    },
    "headers": "accept accept-encoding accept-language authorization connection content-length content-type host sec-fetch-mode user-agent",
    "method": "POST",
    "url": "/track",
  },
]
`;

exports[`Telemetry reports user error 1`] = `
[
  {
    "body": {
      "event": "build:ci_build_process_completed",
      "properties": {
        "buildVersion": "string",
        "nodeVersion": "undefined",
        "osName": "string",
        "osPlatform": "string",
        "status": "user-error",
      },
      "timestamp": "number",
      "userId": "buildbot_user",
    },
    "headers": "accept accept-encoding accept-language authorization connection content-length content-type host sec-fetch-mode user-agent",
    "method": "POST",
    "url": "/track",
  },
]
`;

exports[`Telemetry success generates no logs 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/telemetry/fixtures/success
  siteId: test
  testOpts:
    errorMonitor: true
    pluginsListUrl: test
    silentLingeringProcesses: true
    telemetryOrigin: /test/socket
    telemetryTimeout: 9999

> Current directory
  packages/build/tests/telemetry/fixtures/success

> Config file
  packages/build/tests/telemetry/fixtures/success/netlify.toml

> Resolved config
  build:
    publish: packages/build/tests/telemetry/fixtures/success
    publishOrigin: default

> Context
  production

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;
